--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>冉飞飞的主页</h3>
     <p>从前有一只土拨鼠,它给自己取了一个名字,叫做冉飞飞,成为了当地土拨鼠中唯一一个有名字的鼠
         ,然后有一天,从东边迁移过来一个土拨鼠群,惊奇的是里面也有一一只有名字的土拨鼠,冉飞飞很是
-        好奇,打听得知,名字也叫冉飞飞,然后为了争夺这个名字唯一的使用权，他们开始了对喷....
+        好奇,打听得知,名字也叫冉飞飞,然后为了争夺这个名字唯一的使用权，他们开始了-----
     </p>
     <img src="./01.gif" alt="">
     <img src="./02.gif" alt="">
